--- a/start/css/result.css
+++ b/start/css/result.css
@@ -1,3 +1,28 @@
 #result {
     display: none;
+    background-color: whitesmoke;   
+    width: 80%;
+    text-align: center;
+    border-radius: 20px;
+}
+
+.resultDesc {
+    font-size: 20px;
+}
+
+.resultName {
+    font-size: 26px;
+}
+
+.kakao {
+    color: white ;
+    background-color: #FEE500;
+    font-size: 20px;
+    border: 6px;
+    border-radius: 20px;
+}
+
+.kakao:hover, .kakao:focus{
+    background-color: whitesmoke;
+    color: #FEE500;
 }
